Fix for issues identified via FindBugs